--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-*/
+*/ Database localhost
 * spring.jpa.hibernate.ddl-auto=update
 * spring.datasource.url=jdbc:mysql://localhost:3306/lucas_vidal?useSSL=false&serverTimezone=UTC
 * spring.datasource.username=root
@@ -6,6 +6,7 @@
 * spring.jpa.database-plataform=org.hibernate.dialect.MySQL8Dialect
 /*
 
+/* Database Clever Cloud
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://upreleb5mvm8msyo:j1Fute942SUnEC15oG9n@bzvxnloqy1jwpmrywbcd-mysql.services.clever-cloud.com:3306/bzvxnloqy1jwpmrywbcd
 spring.datasource.username=upreleb5mvm8msyo
